--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@
 # Embedded web-server pid file
 /.web-server-pid
 .idea
+
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/public/bundles/
+/var/
+###< symfony/framework-bundle ###
