--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
-        "easycorp/easyadmin-bundle": "^3.1",
+        "easycorp/easyadmin-bundle": "^2",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.10",
         "symfony/framework-bundle": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/yaml": "5.2.*"
@@ -52,7 +52,8 @@
     },
     "scripts": {
         "auto-scripts": {
-
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
