--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^1.10",
         "symfony/framework-bundle": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
+        "symfony/security-bundle": "5.2.*",
         "symfony/string": "5.2.*",
         "symfony/twig-bundle": "^5.2",
         "symfony/yaml": "5.2.*",
