--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.10",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/security-bundle": "5.2.*",
         "symfony/string": "5.2.*",
