установил пакет с тестами composer req phpunit

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@
 /public/uploads/photos/
 /var/
 ###< symfony/framework-bundle ###
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
