--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,15 @@
         "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^2",
         "sensio/framework-extra-bundle": "^5.6",
+        "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
+        "symfony/css-selector": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.10",
         "symfony/framework-bundle": "5.2.*",
         "symfony/http-client": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/security-bundle": "5.2.*",
         "symfony/string": "5.2.*",
         "symfony/twig-bundle": "^5.2",
