--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^2",
         "sensio/framework-extra-bundle": "^5.6",
-        "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/css-selector": "5.2.*",
         "symfony/dotenv": "5.2.*",
@@ -31,6 +30,9 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.4",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "5.2.*",
         "symfony/debug-bundle": "^5.2",
         "symfony/maker-bundle": "^1.24",
         "symfony/stopwatch": "^5.2",
