--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/flex": "^1.10",
         "symfony/framework-bundle": "5.2.*",
         "symfony/http-client": "5.2.*",
+        "symfony/messenger": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/phpunit-bridge": "^5.2",
         "symfony/security-bundle": "5.2.*",
