--- a/.env
+++ b/.env
@@ -38,3 +38,7 @@ DATABASE_URL="postgresql://homestead:secret@127.0.0.1:5432/symfony-book?serverVe
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
