установил компонент Кэш composer req cache

--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ DATABASE_URL="postgresql://homestead:secret@127.0.0.1:5432/symfony-book?serverVe
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+AKISMET_KEY=dsfsfdsfds
