--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^2",
         "sensio/framework-extra-bundle": "^5.6",
+        "symfony/cache": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/css-selector": "5.2.*",
         "symfony/dotenv": "5.2.*",
@@ -23,12 +24,15 @@
         "symfony/messenger": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/phpunit-bridge": "^5.2",
+        "symfony/process": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/string": "5.2.*",
         "symfony/twig-bundle": "^5.2",
         "symfony/workflow": "5.2.*",
         "symfony/yaml": "5.2.*",
+        "twig/cssinliner-extra": "^3.1",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3.1",
         "twig/intl-extra": "^3.1",
         "twig/twig": "^2.12|^3.0"
     },
