--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/mailer": "5.2.*",
         "symfony/messenger": "5.2.*",
         "symfony/monolog-bundle": "^3.6",
+        "symfony/notifier": "5.2.*",
         "symfony/phpunit-bridge": "^5.2",
         "symfony/process": "5.2.*",
         "symfony/security-bundle": "5.2.*",
