--- a/.env
+++ b/.env
@@ -44,3 +44,7 @@ DATABASE_URL="postgresql://homestead:secret@127.0.0.1:5432/symfony-book?serverVe
 ###< symfony/mailer ###
 
 AKISMET_KEY=dsfsfdsfds
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
