--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/inky-extra": "^3.1",
         "twig/intl-extra": "^3.1",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "webonyx/graphql-php": "^14.3"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.4",
