--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/security-bundle": "5.2.*",
         "symfony/serializer": "5.2.*",
         "symfony/string": "5.2.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-bundle": "^5.2",
         "symfony/validator": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.8",
@@ -47,6 +48,7 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/inky-extra": "^3.1",
         "twig/intl-extra": "^3.1",
+        "twig/string-extra": "^3.1",
         "twig/twig": "^2.12|^3.0",
         "webonyx/graphql-php": "^14.3"
     },
